--- a/styles/game.css
+++ b/styles/game.css
@@ -17,8 +17,10 @@ body {
 }
 
 .game {
+    display: block;
     flex-direction: column;
     gap: 30px;
+    border-radius: 15px;
 }
 
 .pokémon-tcg-card {
@@ -44,7 +46,7 @@ body {
 }
 
 #searchInput {
-    width: 100%;
+    width: 120%;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -105,6 +107,19 @@ ul {
     padding-top: 3px;
     margin: 0;
     margin-left: 20px;
+    margin-top: auto;
+}
+
+.input-container {
+    display: flex;
+    
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    width: 100%;
+    gap: 60px;
 }
 
 
@@ -112,4 +127,21 @@ ul {
 
 .blured {
     filter: blur(10px);
+}
+
+
+/* Lost container */
+
+.lost {
+    display: none;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    margin-top: 100px;
+    border-radius: 15px;
+}
+
+.score {
+    font-size: 40px;
+    font-weight: 800;
 }
